--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My first website",
   "main": "index.js",
   "dependencies": {
+    "aws-sdk": "^2.302.0",
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
